--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
-			<h1>Sobre a Barbearia Alura</h1>
+			<h1 class="titulo principal">Sobre a Barbearia Alura</h1>
 	 
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -19,7 +19,7 @@
 		</div>
 
 		<div class="beneficios">
-			<h2>Benefícios</h2>
+			<h2 class="titulo centralizado">Benefícios</h2>
 
 			<ul>
 				<li class="itens">Atendimento aos Clientes</li>
